--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Algoritmi)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(Algoritmi main.cpp)
+add_executable(Algoritmi main.cpp Graph.cpp Graph.h Date.cpp Date.h GeneralUser.cpp GeneralUser.h GroupUser.cpp GroupUser.h CompanyUser.cpp CompanyUser.h NoticeBoard.cpp NoticeBoard.h)
